@@ -19,6 +19,9 @@ RELEASE 0.96 - XXX
   - Add a $QT_AUTOBUILD_MOC_SOURCES construction variable that controls
     whether moc-generated .cpp files get compiled.
 
+  - Allow the emitter argument to a Builder() to be or expand to a list
+    of emitter functions, which will be called in sequence.
+
   From Chad Austin and Christoph Wiedemann:
 
   - Add support for a $RPATH variable to supply a list of directories
